--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/images/dudejaJI.png
+    - lib/images/
 #    - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
